1. add docs page how to support authpass, 2. fixed anchor link scroll positions, 3. on mobile navbar can now be opened.

--- a/src/main/resources/theme/scss/main.scss
+++ b/src/main/resources/theme/scss/main.scss
@@ -107,6 +107,11 @@ $custom-colors: ("primary-light": ($primary-light, $grey-dark));
 
 .md-anchor {
   color: inherit;
+  scroll-margin-top: 100px;
+  cursor: default;
+}
+*[id] {
+  scroll-margin-top: 100px;
 }
 .adm-block {
   margin-top: 1em;
